[package]
name = "nuki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
btleplug = "0.9.2"
byteorder = "1.4.3"
crc-any = "2.4.3"
futures = "0.3.21"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
tokio = { version = "1.19.2", features = ["macros"] }
uuid = "0.8.2"
