[package]
name = "nuki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
btleplug = "0.9.2"
byteorder = "1.4.3"
crc-any = "2.4.3"
dryoc = "0.3.12"
futures = "0.3.21"
hmac-sha256 = "1.1.4"
log = "0.4.17"
num_enum = "0.5.7"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["macros"] }
uuid = "0.8.2"
